--- a/composer.json
+++ b/composer.json
@@ -1,33 +1,41 @@
 {
-  "name": "swisnl/textsnippet",
-  "description": "Create a snippet of text highlighting a given string",
-  "type": "library",
-  "license": "MIT",
-  "authors": [
-    {
-      "name": "Vincent Kleijnendorst",
-      "email": "vkleijnendort@swis.nl"
-    },
-    {
-      "name": "Björn Brala",
-      "email": "bjorn@swis.nl"
-    }
-  ],
-  "minimum-stability": "stable",
-  "require": {
-    "php": ">=7.0"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "~6.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "Swis\\": "src/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Test\\": "tests/"
-    }
-  }
+	"name": "swisnl/textsnippet",
+	"description": "Create a snippet of text highlighting a given string",
+	"type": "library",
+	"license": "MIT",
+	"authors": [
+		{
+			"name": "Vincent Kleijnendorst",
+			"email": "vkleijnendort@swis.nl"
+		},
+		{
+			"name": "Björn Brala",
+			"email": "bjorn@swis.nl"
+		}
+	],
+	"minimum-stability": "stable",
+	"require": {
+		"php": ">=7.1"
+	},
+	"require-dev": {
+		"phpunit/phpunit": "~6.0",
+		"phpstan/phpstan": "^0.12.18",
+		"tracy/tracy": "^2.7",
+		"phpstan/phpstan-nette": "^0.12.6"
+	},
+	"autoload": {
+		"psr-4": {
+			"Swis\\": "src/"
+		}
+	},
+	"autoload-dev": {
+		"psr-4": {
+			"Test\\": "tests/"
+		}
+	},
+	"scripts": {
+		"phpstan": [
+			"vendor/bin/phpstan analyse src -c phpstan.neon --level 6 --no-progress"
+		]
+	}
 }
